# decorate_video

./: AutoTime.h  CMakeLists.txt  README.md  decorateVideo.cpp  decorateVideo.h  egl.cpp  egl.h  event.cpp  event.h  ffgif.h  gl_render.cpp  gl_render.h  material.cpp  material.h  matops.cpp  matops.h  mergeVideo.sh  merge_pcm.c  pb.c  pb.h  safequeue.h  shader_util.h  stream_cmd.cpp  stream_cmd.h  version.h.in  videoplayer.cpp  videoplayer.h  videowriter.cpp  videowriter.h
3rd/cvxfont/: cvxfont.cpp  cvxfont.h
3rd/gifdecoder/: ffgif.cpp  gifdec.c
3rd/ippiw/: CMakeLists.txt  Makefile
3rd/log/: LOGHelp.cpp  LOGHelp.h  UitlTools.cpp  UitlTools.h
3rd/shmqueue/: Makefile  shm_queue.h
filter/: CMakeLists.txt  Makefile  fft_watermark.cpp  fft_watermark.h  watermark.cpp  watermark.h
opengl/: gl_render.cpp
opengl/glad/: glad.c  glad.h
resources/analog_clock/: Thumbs.db
resources/digital_clock/: Thumbs.db
